[package]
name = "test"
version = "0.1.0"
authors = ["Benjamin Givens <btg99email@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minecraft = { path = "../minecraft" }
zip = "0.5.4"
regex = "1.3.3"
lazy_static = "1.4.0"
colored = "1.9"